--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <hr />
   </div>
   <div>
-    <p><b>Name:</b> Festus Ebin</p>
+    <p><b>Full Name:</b> Festus Ebin</p>
     <p><b>Email Address:</b> ebinfestus@gmail.com</p>
     <p><b>Slack username:</b> firstus</p>
     <section>
